[package]
name = "emoji"
version = "0.1.1"
authors = ["Richard Anaya", "Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library of emoji"
repository = "https://github.com/richardanaya/emoji-rs"
build = "build.rs"

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }