[package]
name = "emoji"
version = "0.2.1"
authors = ["Shizcow <pohl.devin@gmail.com>", "Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Every emoji, their metadata, and localized annotations"
repository = "https://github.com/Shizcow/emoji-rs"
readme = "../README.md"

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
fuzzy-matcher = "0.3.7"
itertools = "0.9.0"
lazy_static = "1.4.0"

[features]
default = ["en"]
af = []
am = []
ar = []
ar_SA = []
as = []
ast = []
az = []
be = []
bg = []
bn = []
br = []
bs = []
ca = []
ccp = []
ceb = []
chr = []
ckb = []
cs = []
cy = []
da = []
de = []
de_CH = []
doi = []
el = []
en = []
en_001 = []
en_AU = []
en_CA = []
en_GB = []
en_IN = []
es = []
es_419 = []
es_MX = []
es_US = []
et = []
eu = []
fa = []
fi = []
fil = []
fo = []
fr = []
fr_CA = []
ga = []
gd = []
gl = []
gu = []
ha = []
ha_NE = []
he = []
hi = []
hr = []
hu = []
hy = []
ia = []
id = []
ig = []
is = []
it = []
ja = []
jv = []
ka = []
kab = []
kk = []
kl = []
km = []
kn = []
ko = []
kok = []
ku = []
ky = []
lb = []
lo = []
lt = []
lv = []
mai = []
mi = []
mk = []
ml = []
mn = []
mni = []
mr = []
ms = []
mt = []
my = []
nb = []
ne = []
nl = []
nn = []
or = []
pa = []
pa_Arab = []
pcm = []
pl = []
ps = []
pt = []
pt_PT = []
qu = []
rm = []
ro = []
root = []
ru = []
rw = []
sa = []
sat = []
sd = []
si = []
sk = []
sl = []
so = []
sq = []
sr = []
sr_Cyrl = []
sr_Cyrl_BA = []
sr_Latn = []
sr_Latn_BA = []
su = []
sv = []
sw = []
sw_KE = []
ta = []
te = []
tg = []
th = []
ti = []
tk = []
to = []
tr = []
tt = []
ug = []
uk = []
ur = []
uz = []
vi = []
wo = []
xh = []
yo = []
yo_BJ = []
yue = []
yue_Hans = []
zh = []
zh_Hant = []
zh_Hant_HK = []
zu = []
