[package]
name = "generate"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"


[dependencies]
xml-rs = "0.8.3"
quote = "1.0.7"
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10.8"
chrono = "0.4.19"
itertools = "0.9.0"
proc-macro2 = "1.0.24"
unidecode = "0.3.0"
